--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <img src="logo.png">
 <br>
-  <h1>Gramado</h1>
+  <a href="https://delivery.gourmetsa.com.br/v2/CandidosPizzariaGourmetGramado"><h1>Gramado</h1></a>
 <br>
-  <h1>Canela</h1>
+  <a href="https://delivery.gourmetsa.com.br/v2/CandidosPizzariaGourmetCanela"><h1>Canela</h1></a>
+    
 </html>
