--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <img src="logo.png">
 <br>
-  <a href="https://delivery.gourmetsa.com.br/v2/CandidosPizzariaGourmetGramado"><h1>Gramado</h1></a>
+  <a href="https://delivery.gourmetsa.com.br/v2/CandidosPizzariaGourmetGramado"><img src="pizza.png"><h1>Gramado</h1></a>
 <br>
+  <hr>
   <a href="https://delivery.gourmetsa.com.br/v2/CandidosPizzariaGourmetCanela"><h1>Canela</h1></a>
     
 </html>
