--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
       html, body {
     height: 100%;
     background-color: #324C30;
-        /*color: white;*/
-}
+        color: white;
+        a:link {  color: white;}
+        a:visited {  color: white; }
+        a:hover {  color: white; }
 
 html {
     display: table;
