--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <html>
   <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+ 
     <style>
+         a:link {  color: white;}
+        a:visited {  color: white; }
+        a:hover {  color: white; }
       html, body {
     height: 100%;
     background-color: #324C30;
         color: white;
-        a:link {  color: white;}
-        a:visited {  color: white; }
-        a:hover {  color: white; }
-
-html {
-    display: table;
-    margin: auto;
-}
-
-body {
-    display: table-cell;
-    vertical-align: middle;
-}
+     
+    font: 14px/1.5em "Lucida Grande",Arial,sans-serif;
+    margin: 20px;
+    width: auto;
+      }
     </style>
   </head>
   <body>
