--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
   <head>
+    <title>Candidos Pizza Gourmet<title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta keywords="pizza gourmet gramado canela delivery">
+
  
     <style>
          a:link {  color: white;}
