--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="pt-br">
   <head>
-    <title>Candidos Pizza Gourmet<title>
+    <title>Candidos Pizza Gourmet</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta keywords="pizza gourmet gramado canela delivery">
 
