--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Candidos Pizza Gourmet</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta keywords="pizza gourmet gramado canela delivery">
+<meta name="keywords" content="pizza candidos gourmet gramado canela delivery">
 <style>
 a:link {  color: white;}
 a:visited {  color: white; }
@@ -27,9 +27,9 @@ html, body {
 </head>
 <body>
 <div id="pizza">
-<img id="logo" name="logo" src="logo.png">
+<img id="logo" src="logo.png" alt"Candidos Pizza Gourmet">
 <br>
-<p><h1>Escolha a cidade</h1></p>
+<h1>Escolha a cidade</h1>
 <a href="https://delivery.gourmetsa.com.br/v2/CandidosPizzariaGourmetGramado">
 <h2>Gramado</h2>
 <br>
