--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ html, body {
 </head>
 <body>
 <div id="pizza">
-<img id="logo" src="logo.png" alt"Candidos Pizza Gourmet">
+<img id="logo" src="logo.png" alt="Candidos Pizza Gourmet">
 <br>
 <h1>Escolha a cidade</h1>
 <a href="https://delivery.gourmetsa.com.br/v2/CandidosPizzariaGourmetGramado">
