--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<title>Candidos Pizza Gourmet</title>
+<title>Candido's Pizza Gourmet</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="pizza candidos gourmet gramado canela delivery">
+<meta name="keywords" content="pizza candidos candido's gourmet gramado canela delivery">
 <style>
 a:link {  color: white;}
 a:visited {  color: white; }
